# advent-of-code

./: README.md  \
2015/: README.md
2016/: README.md
2016/day-01/: README.md  day-01.go  go.mod
2016/day-02/: README.md  day-02.go
2016/day-03/: README.md  day-03.go  go.mod
2016/day-04/: README.md  day-04.go  go.mod
2016/day-05/: README.md  day-05.go  go.mod
2016/day-06/: README.md  day-06.go  input.txt
2016/day-07/: README.md  day-07.go  go.mod
2016/day-08/: README.md  day-08.go  go.mod
2016/day-09/: README.md  day-09.go  go.mod
2016/day-10/: README.md  day-10.go  go.mod
2017/: '  aoc_2017.opam  dune-project
2017/lib/: dune  utils.ml
2017/lib/day_01/: README.md  day_01.ml
2017/lib/day_02/: README.md  day_02.ml
2017/lib/day_03/: README.md  day_03.ml
2017/lib/day_04/: README.md  day_04.ml
2017/lib/day_05/: README.md  day_05.ml
2017/lib/day_06/: README.md  day_06.ml
2017/lib/day_07/: README.md  day7.py  day_07.ml
2017/lib/day_08/: README.md  day_08.ml
2017/test/: dune
2018/: .gitignore  README.md  mix.exs
2018/day-01/: README.md  day-01.exs
2018/lib/day-01/: day-01.ex
2018/lib/day-02/: README.md  day-02.ex
